...
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:startIconDrawable="@drawable/ic_search_24"
                app:startIconTint="@color/color_hint_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputSearchMovies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:hint="@string/search_movie"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_normal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
...
